# NM_Interpolation

Output/Chebyshev_Grid/Test_1/: F1_ChebyshevGrid.txt
Output/Chebyshev_Grid/Test_1/Lagrange_Interpolation/: F1_ChebyshevGrid_Lagrange.txt  F1_Lagrange_Interpolation.m
Output/Chebyshev_Grid/Test_1/Spline_Interpolation/: F1_ChebyshevGrid_Spline.txt  F1_Spline_Interpolation.m
Output/Chebyshev_Grid/Test_2/: F2_ChebyshevGrid.txt
Output/Chebyshev_Grid/Test_2/Lagrange_Interpolation/: F2_ChebyshevGrid_Lagrange.txt  F2_Lagrange_Interpolation.m
Output/Chebyshev_Grid/Test_2/Spline_Interpolation/: F2_ChebyshevGrid_Spline.txt  F2_Spline_Interpolation.m
Output/Chebyshev_Grid/Test_3/: F3_ChebyshevGrid.txt
Output/Chebyshev_Grid/Test_3/Lagrange_Interpolation/: F3_ChebyshevGrid_Lagrange.txt  F3_Lagrange_Interpolation.m
Output/Chebyshev_Grid/Test_3/Spline_Interpolation/: F3_ChebyshevGrid_Spline.txt  F3_Spline_Interpolation.m
Output/Chebyshev_Grid/Test_4/: F4_ChebyshevGrid.txt
Output/Chebyshev_Grid/Test_4/Lagrange_Interpolation/: F4_ChebyshevGrid_Lagrange.txt  F4_Lagrange_Interpolation.m
Output/Uniform_Grid/Test_1/: F1_UniformGrid.txt
Output/Uniform_Grid/Test_2/: F2_UniformGrid.txt
Output/Uniform_Grid/Test_3/: F3_UniformGrid.txt
Output/Uniform_Grid/Test_4/: F4_UniformGrid.txt
code/: CMakeLists.txt  grid.cpp  grid.h  lagrange_Interpolation.cpp  lagrange_Interpolation.h  main.cpp  matrix_operations.cpp  matrix_operations.h  norm.cpp  norm.h  output.cpp  output.h  sets.h  spline_Interpolation.cpp  spline_Interpolation.h  test_functions.cpp  test_functions.h
(+40 files in other folders)
